# mcp-cli-skill

./: README.md  SKILL.md  pyproject.toml
scripts/: mcp_call.py
src/mcp_cli_skill/: __init__.py  cli.py
