[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cli-skill"
version = "0.4.1"
description = "Call any MCP server tool from the command line with shell composition support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Shivansh Singh", email = "wiseeldrich2004@gmail.com" }
]
keywords = ["mcp", "model-context-protocol", "cli", "agent", "skills"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/wise-toddler/mcp-cli-skill"
Repository = "https://github.com/wise-toddler/mcp-cli-skill"

[project.scripts]
mcp-call = "mcp_cli_skill.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_cli_skill"]
